Implementing view and controller for Produts + Improving queue window + adding .gitignore

--- a/QueueGames.AngularApp/QueueGames.AngularApp.csproj
+++ b/QueueGames.AngularApp/QueueGames.AngularApp.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app\app.config.js" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -67,14 +68,18 @@
   <ItemGroup>
     <Content Include="app\app.js" />
     <Content Include="app\class\QueueItem.js" />
+    <Content Include="app\controller\ProductsController.js" />
     <Content Include="app\controller\QueueItemController.js" />
     <Content Include="app\directive\queuemanager\queue-manager.css" />
     <Content Include="app\directive\queuemanager\QueueManager.js" />
     <Content Include="app\directive\queuemanager\queue-manager-view.html" />
     <Content Include="app\service\QueueItemService.js" />
+    <Content Include="app\view\ProductEdit.html" />
+    <Content Include="app\view\ProductsView.html" />
     <Content Include="app\view\queueListView.html" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Products.css" />
     <Content Include="Content\Site.css" />
     <Content Include="Index.html" />
     <Content Include="Web.config">
