--- a/QueueGames.WebApi/Web.Release.config
+++ b/QueueGames.WebApi/Web.Release.config
@@ -7,13 +7,12 @@
     In the example below, the "SetAttributes" transform will change the value of 
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
     finds an attribute "name" that has a value of "MyDB".
-    
-    <connectionStrings>
-      <add name="MyDB" 
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
   -->
+  <connectionStrings>
+    <add name="QueueGamesContext"
+      connectionString="Data Source=(local); Initial Catalog=QueueGames.Data.CodeFirst.Context.QueueGamesContext; Integrated Security=false; user id=sa; password=123mudar;"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
