--- a/QueueGames.AngularApp/package.json
+++ b/QueueGames.AngularApp/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "http-server . -a localhost -p 10069 -c-1",
+    "prestartdist": "gulp",
     "startdist": "http-server ./dist -a localhost -p 10069 -c-1"
   },
   "repository": {
