Adding POST and data to NodeJS express backend server (MongoDB will come :D)

--- a/QueueGames-NodeJsServer/package.json
+++ b/QueueGames-NodeJsServer/package.json
@@ -9,6 +9,7 @@
   "author": "https://about.me/brunoha",
   "license": "MIT",
   "devDependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3"
   }
 }
